--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -1,4 +1,5 @@
+@import "./main.css";
+@import "./loading.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "./main.css";
